[project]
name = "loadmodels"
version = "0.1.0"
description = "LLM Model Download Tool"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Finn J. Kane", email = "fjkane@protonmail.com" }
]
dependencies = [
    "huggingface-hub>=1.1.7",
    "pyaml>=25.7.0",
]

[project.scripts]
mload = "models_cli:main"

[project.urls]
Homepage = "https://github.com/fjkane/loadmodels"
Source = "https://github.com/fjkane/loadmodels"
Issues = "https://github.com/fjkane/loadmodels/issues"